--- a/接口文档.md
+++ b/接口文档.md
@@ -13,7 +13,7 @@
 - 频道封面http://app.hgpornhub.com/module/nav?navId=850
 	- Get
 	- navId：Integer
-- 频道资源列表
+- 频道资源列表 http://app.huangguaporn.com/module/movlist
 	- Post
 	- {"navCls":1,"navId":850,"pageSize":10,"pageNo":1} 
 - 播放页面http://app.hgpornhub.com/mov/browse?movId=100611&version=v2
