--- a/接口文档.md
+++ b/接口文档.md
@@ -6,7 +6,7 @@
 	- 动态分类http://app.hgpornhub.com//home/cls/query
 		- //home/clsmov/query?filter=1&pageNo=1&pageSize=10
 			- filter:1.最多播放2.最近更新3.最多喜欢
-			- clsid：不传为全部，根据上面的动态分类来
+			- clsId：不传为全部，根据上面的动态分类来
 	- 重磅热播/home/hotmov/query?pageNo=1
 	- 最新片源//home/newmov/query?pageNo=1
 	- 人气排行榜//home/selection/query
